--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div id="_TEMP">
 			<h1>RECALL</h1>
 			<p>Recall is a simple project management tool which is completely free!</p>
+			<p>Tip - Right Click to Delete stuff that can be deleted!</p>
 			<div id="all_projects"><button id="new-button" onclick="create();">+ New Project</button></div>
 		</div>
 	</body>
