--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 			<h1>RECALL</h1>
 			<p>Recall is a simple project management tool which is completely free!</p>
 			<p>Tip - Right Click to Delete stuff that can be deleted!</p>
-			<div id="all_projects"><button id="new-button" onclick="create();">+ New Project</button></div>
+			<div><p>Download the new Recall App for your system!</p><button onclick="window.open('https://github.com/Attachment-Studios/Recall/raw/main/windows/Recall.exe');">Windows</button></div>
+			<div id="all_projects"><p>All Projects</p><button id="new-button" onclick="create();">+ New Project</button></div>
 		</div>
 	</body>
 </html>
