--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>Recall - Project Management Tool</title>
 		
 		<link rel="stylesheet" href="style.css">
+		<link rel="fav icon" href="https://github.com/Attachment-Studios/Recall/blob/main/windows/web/icon.png?raw=true">
 		
 		<script src="script.js" defer></script>
 		<script>
