--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 		
 		<link rel="stylesheet" href="style.css">
 		<link rel="fav icon" href="https://github.com/Attachment-Studios/Recall/blob/main/windows/web/icon.png?raw=true">
-		
+
+		<meta name="description" content="Recall is a free Project Management Tool.">
+		<meta property="og:url" content="https://attachment-studios.github.io/Recall/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Recall">
+		<meta property="og:description" content="Recall is a free Project Management Tool.">
+		<meta property="og:image" content="https://github.com/Attachment-Studios/Recall/blob/main/Recall - Banner.png?raw=true">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="attachment-studios.github.io">
+		<meta property="twitter:url" content="https://attachment-studios.github.io/Recall/">
+		<meta name="twitter:title" content="Recall">
+		<meta name="twitter:description" content="Recall is a free Project Management Tool.">
+		<meta name="twitter:image" content="https://github.com/Attachment-Studios/Recall/blob/main/Recall - Banner.png?raw=true">
+
 		<script src="script.js" defer></script>
 		<script>
 			window.addEventListener('contextmenu', e => e.preventDefault());
