--- a/window.html
+++ b/window.html
@@ -3,7 +3,7 @@
 		<title>Recall - Project Management Tool</title>
 		
 		<link rel="stylesheet" href="style.css">
-		<link rel="fav icon" href="https://github.com/Attachment-Studios/Recall/blob/main/windows/web/icon.png?raw=true">
+		<link rel="fav icon" href="Icon.png">
 
 		<meta name="description" content="Recall is a free Project Management Tool.">
 		<meta property="og:url" content="https://attachment-studios.github.io/Recall/">
@@ -29,9 +29,8 @@
 	<body>
 		<div id="_TEMP">
 			<h1>RECALL</h1>
-			<p>Recall is a simple project management tool which is completely free!</p>
+			<p>Recall is a simple project management tool which is completely free! </p>
 			<p id="home--tip">Tip - Right Click to Delete stuff that can be deleted! <button onclick="remove_tip();">X</button></p>
-			<div><p>Download the new Recall App for your system!</p><button onclick="window.open('https://github.com/Attachment-Studios/Recall/raw/main/windows/Recall.exe');">Windows</button></div>
 			<div id="all_projects"><p>All Projects</p><button id="new-button" onclick="create();">+ New Project</button></div>
 		</div>
 	</body>
